# public-challenge

./: README.md  aqua.yaml
challenge/100/00/: README.md  challenge.yaml
challenge/100/00/files/: docker-compose.yml  index.js  package.json
challenge/100/00/solver/: main.py  pyproject.toml  solve.py
challenge/100/01/: README.md  challenge.yaml
challenge/100/01/files/web/: flag.txt  package.json
challenge/100/01/files/web/public/: index.html
challenge/100/01/solver/: main.sh
challenge/100/02/: README.md  challenge.yaml
challenge/100/02/files/: compose.yaml
challenge/100/02/files/web/: Dockerfile  package-lock.json  package.json
challenge/100/02/solver/: main.sh
challenge/100/03/: README.md  challenge.yaml
challenge/100/03/files/: compose.yaml
challenge/100/03/files/bot/: bot.js
challenge/100/03/files/web/: index.js
challenge/100/03/files/web/public/: index.html
challenge/100/03/solver/: README.md
challenge/100/04/: README.md  challenge.yaml
challenge/100/04/solver/: README.md
web/simple-clicker/: README.md
web/simple-clicker/files/: index.js  package.json
web/simple-clicker/files/public/public/: index.html
web/simple-clicker/scripts/: dirsync.sh
