[tool.poetry]
name = "solver"
version = "0.1.0"
description = "solver of simple checker"
authors = ["kaito_tateyama"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
